tests/ui/errors/attr.tuples.unknown.rs
use fortuples::fortuples;

struct Container<T>(T);

fortuples! {
    #[tuples::unknown]
    impl Container<#Tuple> {}
}

fn main() {}
