tests/ui/errors/attr.tuples.unknown.stderr
error: unknown setting
 --> tests/ui/errors/attr.tuples.unknown.rs:6:15
  |
6 |     #[tuples::unknown]
  |               ^^^^^^^
